# cyberdrop-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  readme.md
examples/: create_album.rs  edit_album.rs  list_album_files.rs  list_albums.rs  login.rs  register.rs  request_new_album_link.rs  upload_file.rs
src/: account.rs  albums.rs  client.rs  config.rs  error.rs  files.rs  lib.rs  models.rs  public.rs  token.rs  transport.rs  uploads.rs  utils.rs
tests/: live.rs
