[package]
name = "cyberdrop-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2.0"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
