[package]
name = "cyberdrop-client"
version = "0.4.1"
edition = "2024"
description = "Rust API client for Cyberdrop, with async support and typed models. Also works for bunkr.cr"
license = "MIT"
repository = "https://github.com/11philip22/cyberdrop-rs"
documentation = "https://docs.rs/cyberdrop-client"
homepage = "https://cyberdrop.cr"

keywords = [
  "cyberdrop",
  "api",
  "client",
  "async",
  "upload",
]

categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming",
  "web-programming::http-client",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2.0"
serde_json = "1"
bytes = "1"
futures-core = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
